--- a/files/cv.html
+++ b/files/cv.html
@@ -3,7 +3,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://github.com/emmawing/emmawing.github.io/blob/04d72ee1b2dcb29359feb65485909a550ba2f529/files/wing_cv2024.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
