--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,32 +5,19 @@ permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+Manuscripts
+======
 
-{% include base_path %}
+Wing & Altmann. Intermediary object states are activated by sentences describing completed events. [Manuscript in preparation.]
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
+Papers
+======
 
+Prystauka, Wing, & Altmann. (2024) Investigating the interplay between morphosyntax and event comprehension from the perspective of intersecting object histories. Journal of Experimental Psychology: Learning, Memory, and Cognition. 
+https://psycnet.apa.org/doiLanding?doi=10.1037%2Fxlm0001307
 
+Books
+======
 
+Wing & Ccora Mamani. (2021). Yachasum: Qhichwa Básico (Let’s Learn: Basic Quechua). Náufrago E.I.R.L.
+https://isbn.bnp.gob.pe//catalogo.php?mode=detalle&nt=121428
