--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -14,10 +14,10 @@ Papers
 ======
 
 Prystauka, Wing, & Altmann. (2024) Investigating the interplay between morphosyntax and event comprehension from the perspective of intersecting object histories. Journal of Experimental Psychology: Learning, Memory, and Cognition. 
-https://psycnet.apa.org/doiLanding?doi=10.1037%2Fxlm0001307
+<a href="https://psycnet.apa.org/doiLanding?doi=10.1037%2Fxlm0001307" style="color: gray; text-decoration: underline; target=_blank">details</a>
 
 Books
 ======
 
 Wing & Ccora Mamani. (2021). Yachasum: Qhichwa Básico (Let’s Learn: Basic Quechua). Náufrago E.I.R.L.
-https://isbn.bnp.gob.pe//catalogo.php?mode=detalle&nt=121428
+<a href="https://isbn.bnp.gob.pe//catalogo.php?mode=detalle&nt=121428" style="color: gray; text-decoration: underline; target=_blank">details</a>
