--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -4,3 +4,21 @@ title:
 permalink: /publications/
 author_profile: true
 ---
+
+<h1>Manuscripts</h1> 
+
+Wing & Altmann. Intermediary object states are activated by sentences describing completed events. [Manuscript in preparation.]
+
+<br>
+
+<h1>Papers</h1> 
+
+Prystauka, Wing, & Altmann. (2024) Investigating the interplay between morphosyntax and event comprehension from the perspective of intersecting object histories. <em>Journal of Experimental Psychology: Learning, Memory, and Cognition.</em> 
+<a href="https://psycnet.apa.org/doiLanding?doi=10.1037%2Fxlm0001307" style="color: gray; text-decoration: underline; target=_blank">details</a>
+
+<br>
+
+<h1>Books</h1> 
+
+Wing & Ccora Mamani. (2021). Yachasum: Qhichwa Básico (Let’s Learn: Basic Quechua). <em>Náufrago E.I.R.L.</em>
+<a href="https://isbn.bnp.gob.pe//catalogo.php?mode=detalle&nt=121428" style="color: gray; text-decoration: underline; target=_blank">details</a>
