--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,40 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.talkmap_link == true %}
+<h2>Presentations</h2> 
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+Wing. Investigating a relationship between linguistic and conceptual structure. (Invited talk). <em>Institute for the Brain and Cognitive Sciences (IBACS) End of Year Event, UConn.</em>
 
-{% endif %}
+<br>
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+Wing. Hierarchy‐driven conceptual structure: A potential relationship between the linguistic hierarchy & conceptual structure. (Invited talk.) <em>Language and Cognition Lab, Heidelberg University.</em>
+
+<br>
+
+Wing & Koval. The effect of tense on event representations during processing. (Poster.) <em>Architectures and Mechanisms for Language Processing (AMLaP), San Sebastián, Aug 31</em>
+
+<br>
+
+Wing, Koval & Altmann. An experimental study of the interaction between event structure, perfective aspect, and tense in English. (Talk). <em>Verbal Domains Workshop, Newcastle, Jun 26</em>
+
+<br>
+
+Wing. Finding a middle ground: Mid-event object states and constraints on event semantics. (Invited talk). <em>Language Festival 2023, UConn.</em>
+
+<br>
+
+Wing. Evidence of mid-event object representations in perfective aspect. (Poster). <em>Language Festival 2023, UConn.</em>
+
+<br>
+
+Wing & Altmann. “She filled the cookie jar”: A partially filled cookie jar is constitutive of the corresponding event representation. (Talk). <em>Psycholinguistics in Flanders (PiF), Ghent, May 30</em>
+
+<br>
+
+Wing, & Altmann. Evidence of mid-event object representations in perfective aspect. (Poster). <em>Human Sentence Processing (HSP), Pittsburgh, Mar 10</em>
+
+<br> 
+
+Wing, Prystauka & Altmann. Amplifying event representation: Morphosyntax and the graded accessibility of initial and end states during sentence processing. (Talk). <em>Architectures and Mechanisms for Language Processing (AMLaP), Paris, Sep 2</em>
+
+
