--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -7,6 +7,11 @@ author_profile: true
 
 <h2>Presentations</h2> 
 
+Wing, Koval & Tabor. (2025) The size of "it": Syntactic reactivation effects and accessibility of conceptual event representations during anaphora processing. (Poster). <em>Human Sentence Processing (HSP), UMD.</em>
+
+<br>
+<br>
+
 Wing. (2024) Investigating a relationship between linguistic and conceptual structure. (Invited talk). <em>Institute for the Brain and Cognitive Sciences (IBACS) End of Year Event, UConn.</em>
 
 <br>
