--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -22,7 +22,7 @@ Wing. (2024) Hierarchy‐driven conceptual structure: A potential relationship b
 <br>
 <br>
 
-Wing & Koval. (2023) The effect of tense on event representations during processing. (Poster.) <em>Architectures and Mechanisms for Language Processing (AMLaP), San Sebastián, Aug 31</em>
+Wing & Koval. (2023) The effect of tense on event representations during processing. (Poster.) <em>Architectures and Mechanisms for Language Processing (AMLaP), San Sebastián, Aug 31</em> | <a href="/files/2023_amlap_wing_koval.pdf" target="_blank">PDF</a>
 
 <br>
 <br>
@@ -37,7 +37,7 @@ Wing. (2023) Finding a middle ground: Mid-event object states and constraints on
 <br>
 <br>
 
-Wing. (2023) Evidence of mid-event object representations in perfective aspect. (Poster). <em>Language Festival 2023, UConn.</em>
+Wing. (2023) Evidence of mid-event object representations in perfective aspect. (Poster). <em>Language Festival 2023, UConn.</em> | <a href="/files/2023_hsp_wing_altmann.pdf" target="_blank">PDF</a>
 
 <br>
 <br>
