--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -47,7 +47,7 @@ Wing & Altmann. (2023) “She filled the cookie jar”: A partially filled cooki
 <br>
 <br>
 
-Wing, & Altmann. (2023) Evidence of mid-event object representations in perfective aspect. (Poster). <em>Human Sentence Processing (HSP), Pittsburgh, Mar 10</em>
+Wing, & Altmann. (2023) Evidence of mid-event object representations in perfective aspect. (Poster). <em>Human Sentence Processing (HSP), Pittsburgh, Mar 10</em> | <a href="/files/2023_hsp_wing_altmann.pdf" target="_blank">PDF</a>
 
 <br> 
 <br>
