--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -7,7 +7,7 @@ author_profile: true
 
 <h1>Manuscripts</h1> 
 
-Wing & Altmann. Intermediary object states are activated by sentences describing completed events. [Manuscript in preparation.]
+Wing & Altmann. [Submitted manuscript.]
 
 <br>
 <br>
