--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,6 +8,9 @@ author_profile: true
 <h1>Manuscripts</h1> 
 
 Wing & Altmann. [Submitted manuscript.]
+# <a href="https://" style="color: gray; text-decoration: underline;" target="_blank">info</a> |
+<a href="https://osf.io/hyb8n/" style="color: gray; text-decoration: underline;" target="_blank">OSF</a> 
+
 
 <br>
 <br>
@@ -15,7 +18,7 @@ Wing & Altmann. [Submitted manuscript.]
 <h1>Papers</h1> 
 
 Prystauka, Wing, & Altmann. (2023) Investigating the interplay between morphosyntax and event comprehension from the perspective of intersecting object histories. <em>Journal of Experimental Psychology: Learning, Memory, and Cognition.</em> 
-<a href="https://psycnet.apa.org/doiLanding?doi=10.1037%2Fxlm0001307" style="color: gray; text-decoration: underline;" target="_blank">details</a>
+<a href="https://psycnet.apa.org/doiLanding?doi=10.1037%2Fxlm0001307" style="color: gray; text-decoration: underline;" target="_blank">info</a> 
 
 <br>
 <br>
