--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,8 +8,8 @@ author_profile: true
 <h1>Manuscripts</h1> 
 
 Wing & Altmann. [Submitted manuscript.]
-# <a href="https://" style="color: gray; text-decoration: underline;" target="_blank">info</a> |
-<a href="https://osf.io/hyb8n/" style="color: gray; text-decoration: underline;" target="_blank">OSF</a> 
+<a style="color: gray; text-decoration: underline;" target="_blank">info</a> |
+<a style="color: gray; text-decoration: underline;" target="_blank">OSF</a> 
 
 
 <br>
